# ube-mbrl

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py  thirdparty_licenses.md
data/: Ant.pkl  HalfCheetah.pkl  Walker2D.pkl  deep_sea_ensemble.pkl  deep_sea_exploration_gain.pkl  deep_sea_main.pkl  deep_sea_ube_ablation.pkl  nroom_ensemble.pkl  nroom_main.pkl  sparse_pendulum.pkl  sparse_pendulum_ensemble.pkl
docker/: Dockerfile  build_docker.sh  test_install.sh
notebooks/: deep_sea_ensemble_ablation.ipynb  deep_sea_exploration_gain_ablation.ipynb  deep_sea_main.ipynb  deep_sea_ube_ablation.ipynb  ensemble_ablation.ipynb  nroom_main.ipynb  pybullet_results.ipynb  sparse_pendulum.ipynb  sparse_pendulum_ensemble_ablation.ipynb
ube_mbrl/agent/: __init__.py  actor.py  base.py  critic.py  qusac.py  sac.py  uncertainty.py  util.py
ube_mbrl/conf/: __init__.py  config_qusac_online.py  config_sac_online.py  mbrl_lib_config.yaml
ube_mbrl/envs/: __init__.py  plot.py  reward_fns.py  term_fns.py  truncate_wrapper.py  utils.py
ube_mbrl/mbrl/: LICENSE
ube_mbrl/mbrl/env/: __init__.py
ube_mbrl/mbrl/models/: __init__.py  basic_ensemble.py  gaussian_mlp.py  model.py  model_env.py  model_trainer.py  one_dim_tr_model.py  util.py
ube_mbrl/mbrl/planning/: __init__.py  core.py
ube_mbrl/mbrl/util/: __init__.py  (+3 more)
ube_mbrl/tabular/: agent.py  config.py  deep_sea_exp.py  nroom_exp.py  posterior.py  toy_mdp_example.py  util.py
ube_mbrl/train_scripts/: train_qusac_online.py  train_sac_online.py
ube_mbrl/utils/: common.py  data_collection.py  plot.py  video.py
(+3 files in other folders)
